# diss

./: .gitignore  README.md
Poly/: #Main.hs#  #notes.org#  .#notes.org  CHANGELOG.md  Main.hs  eg.fugue  eg.txt  grammar.org  hole-implementation.org  notes.org  polymorphic.cabal  prelude.fugue  prelude.txt
Poly/src/: #Types.hs#  .#Types.hs  Compiler.hs  Env.hs  Eval.hs  Infer.hs  Parser.hs  Pretty.hs  Types.hs
enriched/: DeBruijn.hs  Named.hs  README.md
fugue/: .gitignore  CHANGELOG.md  Main.hs  README.md  README.org  eg.fugue  fugue.cabal  notes-9-apr.txt  notes.org  optimisation-data.org  prelude.fugue  prelude.old.fugue  prelude2.fugue  rb.fugue  synth.fugue  test.fugue
fugue/src/: Compiler.hs  Editor.hs  Env.hs  Eval.hs  Holes.hs  Infer.hs  Parser.hs  Pretty.hs  Synthesis.hs  Types.hs
fugue/tests/: eval.fugue.tests  run-tests.py
fugue/tests/negative/: 1.fugue  2.fugue  3.fugue  4.fugue  5.fugue  6.fugue
normal-order/: CHANGELOG.md  DeBruijn.hs  Env.hs  Main.hs  Named.hs  README.md  normal-order.cabal
normal-order/src/: DeBruijn.hs  Env.hs  Named.hs
normal-order/test/: Test.hs
pure/: DeBruijn.hs  Main.hs  README.md
