cabal-version:      2.4
name:               polymorphic
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Zac Garby
maintainer:         me@zacgarby.co.uk

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
    exposed-modules: Parser
                   , Types
                   , Compiler

    build-depends:    base ^>=4.14.3.0
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010

executable polymorphic
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.14.3.0
                  , mtl
                  , polymorphic

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
