cabal-version:      2.4
name:               fugue
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Zac Garby
maintainer:         me@zacgarby.co.uk

-- A copyright notice.
-- copyright:
category:           Language
extra-source-files: CHANGELOG.md

library
    exposed-modules: Parser
                   , Types
                   , Infer
                   , Holes
                   , Compiler
                   , Eval
                   , Env
                   , Pretty
                   , Synthesis

    build-depends:    base ^>=4.14.3.0
                    , mtl
                    , parsec ^>=3.1.15.0
                    , directory
                    , time
                    
    hs-source-dirs:   src
    default-language: Haskell2010

    ghc-options: -O2

executable fugue
    main-is:          Main.hs

    ghc-options: -O2

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:  base ^>=4.14.3.0
                  , directory
                  , mtl
                  , parsec ^>=3.1.15.0
                  , fugue
                  , time

    -- Directories containing source files.
    -- hs-source-dirs:
    default-language: Haskell2010
